<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/onc"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:alpha="0.84"
        android:contentDescription="@string/imagenFondoInicio"
        android:scaleType="centerCrop"
        android:src="@drawable/fondobrazo"
        tools:ignore="ImageContrastCheck"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-91dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/bordes_redondeados"
        android:orientation="vertical"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.549">
        <!--Imagen del logo de la applicacion -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/imagenFondoInicio"
            android:src="@drawable/logo"
            tools:ignore="ImageContrastCheck,ImageContrastCheck,ImageContrastCheck" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/BarraNombre"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtNombre"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints=""
            android:background="@drawable/bordes_redondeadosbarras"
            android:ems="10"
            android:hint="@string/s"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            tools:ignore="DuplicateSpeakableTextCheck,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="serif"
            android:text="@string/BarraEdad"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtEdad"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints=""
            android:background="@drawable/bordes_redondeadosbarras"
            android:ems="10"
            android:hint="@string/s"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="serif"
            android:text="@string/BarraEstatura"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtEstatura"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints=""
            android:background="@drawable/bordes_redondeadosbarras"
            android:ems="10"
            android:hint="@string/s"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="serif"
            android:text="@string/BarraPeso"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtPeso"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints=""
            android:background="@drawable/bordes_redondeadosbarras"
            android:ems="10"
            android:hint="@string/s"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="serif"
            android:text="@string/BarraGenero"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtGenero"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints=""
            android:background="@drawable/bordes_redondeadosbarras"
            android:ems="10"
            android:hint="@string/s"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/buttonsave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:backgroundTint="#D32F2F"
            android:fontFamily="serif"
            android:onClick="savedate"
            android:text="@string/BotonGuardar"
            android:textSize="26sp"
            android:textStyle="bold" />
    </LinearLayout>


</FrameLayout>